# MyShell

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Testcases/: directory_test.bat  file_test.bat  navigation_test.bat  process_test.bat
background_programs/: CMakeLists.txt  countdown.cpp  logger.cpp  tictactoe.cpp
programs/: child.cpp  duck.cpp  heart.cpp  spinner.cpp
src/commands/: help.cpp  help.h  run_script.cpp  run_script.h  script.cpp  script.h  set_color.cpp  set_color.h
src/core/: environment.cpp  environment.h  scheduler.cpp  scheduler.h
src/io/: directory_commands.cpp  directory_commands.h  file_commands.cpp  file_commands.h  navigation_commands.cpp  navigation_commands.h
src/process/: process.cpp  process.h
src/shell/: command_executor.cpp  command_executor.h  input_parser.cpp  input_parser.h  shell.cpp  shell.h
src/utils/: system_utils.cpp  system_utils.h
